# route-optimiser-pwa

./: .env.example  .gitignore  CONFIG_SETUP.md  Cargo.toml  Dioxus.toml  Makefile  QUICK_START.md  README.md  Trunk.toml  build.rs  env.example  index.html  manifest.json
assets/: barcode_scanner.js  index.html  manifest.json  mapbox.js  style.css  sw-register.js  sw.js
assets/styles/: main.css
assets/styles/base/: reset.css  typography.css  variables.css
assets/styles/components/: address-list.css  admin-view.css  buttons.css  details-modal.css  draggable-list.css  header.css  legacy-compat.css  login-view.css  notification.css  package-card.css  package-list.css  progress-dashboard.css  scanner.css  settings-popup.css  sync-indicator.css
assets/styles/layouts/: app.css  bottom-sheet.css  responsive.css
assets/styles/utilities/: animations.css  helpers.css
scripts/: deploy.sh
src/: app.rs  config.rs  lib.rs  main.rs  models.rs
src/components/: app.rs  bal_modal.rs  company_modal.rs  details_modal.rs  draggable_package_list.rs  header.rs  login_screen.rs  map.rs  mod.rs  package_card.rs  package_list.rs  register_screen.rs  scanner.rs  settings_popup.rs  sync_indicator.rs
src/context/: language.rs
src/dom/: builder.rs  element.rs  events.rs  incremental.rs  mod.rs
src/hooks/: mod.rs  session_context.rs  use_address_ui.rs  use_auth.rs  use_auth_dual.rs  use_auto_sync.rs  use_delivery_session.rs  use_grouped_packages.rs  use_map.rs  use_packages.rs  use_packages_new.rs  use_session.rs  use_sheet.rs  use_sync_state.rs
src/maps/: mod.rs  traits.rs  web.rs
src/models/: address.rs  admin.rs  auth.rs  company.rs  delivery_session.rs  dtos.rs  mod.rs  optimization.rs  package.rs  session.rs  sync.rs
src/services/: api_client.rs  auth_service.rs  cache_service.rs  delivery_session_converter.rs  delivery_session_service.rs  indexeddb.rs  mod.rs  network_monitor.rs  offline_service.rs  optimization_service.rs  package_service.rs  session_service.rs  sync_service.rs
src/state/: app_state.rs  auth_state.rs  mod.rs  reactivity.rs  session_state.rs  sync_state.rs
src/stores/: auth_store.rs  mod.rs  session_store.rs  sync_store.rs
src/utils/: barcode_ffi.rs  constants.rs  i18n.rs  mapbox_ffi.rs  mod.rs  storage.rs
src/viewmodels/: map_viewmodel.rs  mod.rs  session_viewmodel.rs  sync_viewmodel.rs
src/views/: admin_dashboard.rs  app.rs  bottom_sheet.rs  details_modal.rs  login.rs  mod.rs  package_card.rs  package_list.rs  scanner.rs  settings_popup.rs  sync_indicator.rs  tracking_modal.rs
src/views/auth/: company_selector.rs  login_toggle.rs  login_view.rs  mod.rs  register_view.rs
src/views/shared/: mod.rs  settings_popup.rs
