[package]
name = "route-optimizer-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Yew - Framework principal
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "NodeList",
    "DomTokenList",
    "MediaQueryList",
    "MediaQueryListEvent",
    "console",
] }
js-sys = "0.3"

# HTTP client
gloo-net = { version = "0.5", features = ["http"] }
gloo-storage = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Logging
log = "0.4"
wasm-logger = "0.2"

# Utils
gloo-timers = "0.3"
gloo-utils = "0.2"
chrono = { version = "0.4", features = ["wasmbind"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

