[package]
name = "route-optimizer-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Yew - Framework principal
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
# yewdux = "0.10"  # ❌ ERROR E0804 con Rust 1.90
# Usar hook use_state_handle directamente por ahora

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "MediaQueryList",
    "MediaQueryListEvent",
    "DragEvent",
    "DataTransfer",
    "Event",
    "console",
    "IdbDatabase",
    "IdbObjectStore",
] }
js-sys = "0.3"

# HTTP client
gloo-net = { version = "0.5", features = ["http"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Logging
log = "0.4"
wasm-logger = "0.2"

# Utils
gloo-timers = "0.3"
gloo-utils = "0.2"
chrono = { version = "0.4", features = ["wasmbind"] }
uuid = { version = "1.0", features = ["v4", "wasm-bindgen"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

