[package]
name = "route-optimizer-app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlDivElement",
    "Node",
    "Event",
    "EventTarget",
    "MouseEvent",
    "KeyboardEvent",
    "InputEvent",
    "DragEvent",
    "DataTransfer",
    "MediaQueryList",
    "MediaQueryListEvent",
    "DomTokenList",
    "console",
    "Storage",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbTransaction",
    "IdbRequestReadyState",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

# HTTP client
gloo-net = { version = "0.5", features = ["http"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Logging
log = "0.4"
wasm-logger = "0.2"

# Utils
gloo-timers = "0.3"
gloo-utils = "0.2"
chrono = { version = "0.4", features = ["wasmbind"] }
uuid = { version = "1.0", features = ["v4", "wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

